Archive2/0d/a14664b6f6809e/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:6: error: ‘BinarySearchTree’ has not been declared
 void BinarySearchTree::preorder(tree_node* p, int indent=0)
      ^
main.cpp:1:33: error: variable or field ‘preorder’ declared void
 void BinarySearchTree::preorder(tree_node* p, int indent=0)
                                 ^
main.cpp:1:33: error: ‘tree_node’ was not declared in this scope
main.cpp:1:44: error: ‘p’ was not declared in this scope
 void BinarySearchTree::preorder(tree_node* p, int indent=0)
                                            ^
main.cpp:1:47: error: expected primary-expression before ‘int’
 void BinarySearchTree::preorder(tree_node* p, int indent=0)
                                               ^
